--- a/_posts/thesis_chapters/2024-1-5-Gdps2.md
+++ b/_posts/thesis_chapters/2024-1-5-Gdps2.md
@@ -11,7 +11,86 @@ categories: chapter
 title:  5. The Use of Gameplay Design Patterns "It’s like a project in itself, really"
 ---
 
-$toc$
+-   [Research Questions - Feb 2024](#research-questions---feb-2024)
+-   [Notes to restructure](#notes-to-restructure)
+-   [Chapter outline](#chapter-outline)
+-   [On GDP as a germ-cell and unit of analysis - and chapter
+    outline](#on-gdp-as-a-germ-cell-and-unit-of-analysis---and-chapter-outline)
+-   [Study of Vignette A](#study-of-vignette-a)
+    -   [Descriptive Commentary on Vignette
+        A](#descriptive-commentary-on-vignette-a)
+-   [Observations and analysis of use of Game Design Patterns by
+    participants](#observations-and-analysis-of-use-of-game-design-patterns-by-participants)
+-   [The role of GDPs in the personal appropriation of computational,
+    design and systems
+    concepts](#the-role-of-gdps-in-the-personal-appropriation-of-computational-design-and-systems-concepts)
+-   [Guided Participation](#guided-participation)
+    -   [GDPs offer the potential to assist project navigation, acting
+        as a framework for code examples and step-by-step
+        tutorials](#gdps-offer-the-potential-to-assist-project-navigation-acting-as-a-framework-for-code-examples-and-step-by-step-tutorials)
+    -   [GDPs used to scaffold ideation
+        processes](#gdps-used-to-scaffold-ideation-processes)
+        -   [Problem solving practices as a fund of knowledge (but not
+            really
+            GDP)](#problem-solving-practices-as-a-fund-of-knowledge-but-not-really-gdp)
+        -   [Paper prototyping mapping visual
+            matrix](#paper-prototyping-mapping-visual-matrix)
+        -   [GDPs as used by participants in their prioritisation in the
+            ideation
+            process](#gdps-as-used-by-participants-in-their-prioritisation-in-the-ideation-process)
+    -   [GDPs aiding the process of division of
+        labour](#gdps-aiding-the-process-of-division-of-labour)
+        -   [The development of divisions of labour - MOVED FROM NEXT
+            CHAPTER](#the-development-of-divisions-of-labour---moved-from-next-chapter)
+    -   [The role of GDP used in emerging technical
+        processes](#the-role-of-gdp-used-in-emerging-technical-processes)
+        -   [Use of GDPs to facilitate use of
+            tools](#use-of-gdps-to-facilitate-use-of-tools)
+        -   [Diverse use of technical processes driven by
+            GDPs](#diverse-use-of-technical-processes-driven-by-gdps)
+        -   [Use of GDPs in the development of shared
+            language](#use-of-gdps-in-the-development-of-shared-language)
+        -   [Code Patching as a guided
+            process](#code-patching-as-a-guided-process)
+        -   [GDPs used to nurture tactical responses to coding
+            errors](#gdps-used-to-nurture-tactical-responses-to-coding-errors)
+        -   [Concluding remarks on debugging and
+            revision](#concluding-remarks-on-debugging-and-revision)
+-   [Cultural Dimension](#cultural-dimension)
+    -   [The role of GDPs to facilitate learners to design for
+        others](#the-role-of-gdps-to-facilitate-learners-to-design-for-others)
+        -   [Referring to GDPs (especially during playtesting) can help
+            scaffold the process of imagining the end user
+            experiences.](#referring-to-gdps-especially-during-playtesting-can-help-scaffold-the-process-of-imagining-the-end-user-experiences.)
+        -   [GDPs, the scale/nature of project goals & designing for
+            others](#gdps-the-scalenature-of-project-goals-designing-for-others)
+        -   [Other examples and interpretation on designing for others /
+            shifts of
+            perspective](#other-examples-and-interpretation-on-designing-for-others-shifts-of-perspective)
+    -   [Role of playtesting and feedback and
+        GDPs](#role-of-playtesting-and-feedback-and-gdps)
+        -   [GDP concepts and language used in informal feedback for
+            peers to influence modification of
+            games](#gdp-concepts-and-language-used-in-informal-feedback-for-peers-to-influence-modification-of-games)
+        -   [The propagation of use of GDPs through
+            playtesting](#the-propagation-of-use-of-gdps-through-playtesting)
+    -   [GDPs facilitate the use of wider funds of
+        knowledge](#gdps-facilitate-the-use-of-wider-funds-of-knowledge)
+        -   [Family funds of knowledge](#family-funds-of-knowledge)
+        -   [Funds of knowledge from professional and enthusiast
+            communities](#funds-of-knowledge-from-professional-and-enthusiast-communities)
+-   [Discussion on the use of game design patterns in the 3M learning
+    design](#discussion-on-the-use-of-game-design-patterns-in-the-3m-learning-design)
+    -   [Design patterns as a mid-level pedagogical
+        framework](#design-patterns-as-a-mid-level-pedagogical-framework)
+    -   [Discussion on GDPs, emerging processes and learner
+        agency](#discussion-on-gdps-emerging-processes-and-learner-agency)
+        -   [Tensions between facilitating agency and norming
+            practices](#tensions-between-facilitating-agency-and-norming-practices)
+-   [Chapter Conclusion](#chapter-conclusion)
+    -   [Summary of the pedagogical opportunities of Game Design
+        Patterns](#summary-of-the-pedagogical-opportunities-of-game-design-patterns)
+    -   [Transition to next chapter](#transition-to-next-chapter)
 
 ## Research Questions - Feb 2024
 
@@ -22,18 +101,13 @@ $toc$
 ## Notes to restructure
 
 Really address  the community aspect of the RQ - and highlight that this is why personal elements are not explored in more detail
-Then add personal back in - but keep it very brief - and signpoint to future studies
 
-In each section if there are multiple aspects of that use then highlight that in start of end of the section - and put this into the coding structure.
-
+In each section if there are multiple aspects of that then put into headings  - and put this into the coding structure for data review
 
 Examine overlap of the cultural uses of GDP, and the next chapter - hand in hand here get an overview of what needs to extracted from the data and where it sits
 
-In discussion - refocus discussion on using mid level design construct first - then GDP and pattern collection as an example.
 Also work out what to move to Lit Review - and restructure LT and Methodology based on two chapters near completion.
 
-There is a table of simple results here - listing the sections below with examples - perhaps put in end section
-https://docs.google.com/document/d/12EmPhm8E_TE4rimvRdRf2wC5XRwT3EXO4cRZ99RNkTQ/edit
 
 
 
@@ -812,7 +886,9 @@ NOTE - check if this fits
 Once the code for the new game mechanic has been added, the child is guided to take on challenge of making smaller changes that give rapid feedback.  To aid the process the parent navigates to a particular part of the code for child to alter design. The changes the child makes have a large impact on the end users experience.
  -->
 
-### The role of GDP used in emerging tool use, technical processes and specialist language
+### The role of GDP used in emerging technical processes
+
+<!-- tool use, technical processes and specialist language -->
 
 The emergence, use and propagation of new technical processes motivated by a drive to implement or complete a GDP often happen informally between peers.
 
@@ -821,6 +897,8 @@ The processes are not static but are modified by the community as they are adopt
 
 <!-- Taking a more focused view of the activity here would be implementing a game design pattern - e.g. adding keys and doors pattern in this case. On the level of action, creating a graphical asset of a key and adding this to the level design. The operation would be the exporting the graphical asset as a suitable file format from graphical design tool and uploading it to the code authoring tool. -->
 
+#### Use of GDPs to facilitate use of tools
+
 In this interaction above which was used to illustrate Molly and Nadine's division of labour, the parent is focused on completing the action of creating a graphical asset of a hazard as part of the activity of adding the GDP of including a hazard into the game. Nadine appears reluctant to help at first and when she does she is mostly non-verbal and makes changes quickly in a way that her mother cannot initially follow or replicate. The process of explaining this to her parent would be more time consuming. There may also be a power dynamic happening as well with the child enjoying showing proficiency without sharing the process perhaps as a performative
 demonstration agency or growing status within this community.
 
@@ -828,9 +906,55 @@ THERE IS CROSS OVER HERE WITH CHAPTER 4 - ACTION TO OPERATION - WHAT DOES THIS A
 
 We can see that the process of changing pen colours on the graphical tool is one which the child has been able to translate into a effortless process whereas the parent is still consciously building her competency. Nadine has operationalised the process and it becomes part of the toolset of practices that she can draw on [CITE]. Molly also benefits, the expertise of her child to undertake that process is added to her distributed toolset. However, she is also keen to develop her own competency as indicated by her asking child to explain the process.
 
+#### Diverse use of technical processes driven by GDPs
+MOVED SO EDIT DOWN  
+References to such emerging practices driven by GDPs were present in many exchanges during directed playtesting and pair interactions.
+
+Other examples of processes being adopted by participants through the implementation of GDPs including the fluidity of navigation between playing and coding window shown by all younger participants and many adults and the development of keyboard and mouse coordination to facilitate navigation within the code environment and external support resources to facilitate the code patching process.
+
+In describing this research it is important to avoid overreach when describing the possible utility of GDPs by making a distinction between primary and secondary involvement of GDPS in technical processes.
+
+Some examples contain processes that are linked to the language and the concepts and player experience of GDPs, for example the use of GDP language of hazards and rewards (see extract).
+
+Other examples are more secondary where the emerging processes and adoption of language concern more to do with more general digital design,  which are needed due to the process of implementing game features - which are in this case structured via GDPs.
+
+Thus while the concepts of GDPs are some times useful to explain a technical concepts directly, especially where direct / immediate feedback involving concrete example of experience are relevant, at times the process in more indirect.
+
+After giving feedback on the jump speed Molly's game Ed sharing a process to redundant space at the edges of design sprite characters.
+
+The following example for the most part covers a the technical process of removing redundant space from around art in graphical editors. However the process becomes much clearer to Molly when linked directly to here experience of a game design pattern of altering the sprites hit box.
+
+<!-- NOTE - COVERT TO TABLE? -->
+
+    Ed: for people with background like yours You can use the cramping tool.
+    Ed leads Molly to his workstation and involves his father in the process.
+    ...
+    Mark: In Piskel. You can crop it to the sprite  - cause it take that area too. (gestures – draws a large square with hands – then gestures to the edges). You approach an enemy if you’re close to it, it’ll trigger it.
+    Molly: ‘cause, sometimes you think how am I just sitting on this ledge here?
+    Mark: And you’re floating?
+    Molly: Yeah. Yeah that’s what’s happening. So..
+    Mark: So you can put your sprite back in again and you can crop it down.
+
+<!-- Mark: Show what? What are we doing?
+Ed: On this one it’s like this.
+Molly: Oh that’s good how did you do that?
+Ed: The cramping tool. (laughs nervously)
+Mark: The what?
+Ed: What… Is it cramping? (gestures with hands as scrunching / clutching motion)
+Mark: For doing what? What did we do? I don’t know what we’ve done.
+Ed: People have used the whole block.
+Mark: Oh yeah. We’ve just cropped it. So it’s got no border around it. So you don’t set things off when you get really close to them.
+Molly: Aaaah. I see yes. Cos the corners actually could have. (makes a small square gesture with fingers)
+ -->
+
+
+
+
+#### Use of GDPs in the development of shared language
+
 **Language which has been introduced facilitator interventions is then modified and used organically through community interaction.**
 
-The following example shows a patchy but evolving use of some of the terminology that has been introduced partly by facilitator interventions and partly emerging organically through community interaction. As the community apopt the practices the become community norms.
+The following example shows a patchy but evolving use of some of the terminology that has been introduced partly by facilitator interventions and partly emerging organically through community interaction. As the community adopt the practices the become community norms.
 
 As background information on this pair, the mother's focus has been on creating graphics and has expressed pride in this her growing expertise in this area.
 
@@ -871,51 +995,6 @@ the interaction also shows positive affect of child.
 her role in the community can be explored here. -->
 
 
-#### Other examples of GDP driving adoption of technical processes
-
-References to such emerging practices driven by GDPs were present in many exchanges during directed playtesting and pair interactions. For example, after Ed gave feedback on the jump speed Mi's game, he continued by sharing a process to redundant space at the edges of design sprite characters.
-
-There are many other examples of processes being adopted by participants through the implementation of GDPs including the fluidity of navigation between playing and coding window shown by all younger participants and many adults and the development of keyboard and mouse coordination to facilitate navigation within the code environment and external support resources to facilitate the code patching process.
-
-In describing this research it is important to avoid overreach when describing the possible utility of GDPs by making a disctintion between primary and secondary involvement of GDPS in technical processes.
-
-Some examples contain processes that are linked to the language and the concepts and player experience of GDPs, for example the use of GDP language of hazards and rewards (see extract).
-
-Other examples are more secondary where the emerging processes and adoption of language concern more to do with more general digital design,  which are needed due to the process of implementing game features - which are in this case structured via GDPs.
-
-Thus while the concepts of GDPs are some times useful to explain a technical concepts directly, especially where direct / immediate feedback involving concrete example of experience are relevant, at times the proess in more indirect.
-
-The following example for the most part covers a the technical process of removing redundant space from around art in graphical editors. However the process becomes much clearer to Molly when linked directly to here experience of a game design pattern of altering the sprites hit box.
-
-<!-- NOTE - COVERT TO TABLE? -->
-
-    Ed: for people with background like yours You can use the cramping tool.
-    Ed leads Molly to his workstation and involves his father in the process.
-    ...
-    Mark: In Piskel. You can crop it to the sprite  - cause it take that area too. (gestures – draws a large square with hands – then gestures to the edges). You approach an enemy if you’re close to it, it’ll trigger it.
-    Molly: ‘cause, sometimes you think how am I just sitting on this ledge here?
-    Mark: And you’re floating?
-    Molly: Yeah. Yeah that’s what’s happening. So..
-    Mark: So you can put your sprite back in again and you can crop it down.
-
-<!-- Mark: Show what? What are we doing?
-Ed: On this one it’s like this.
-Molly: Oh that’s good how did you do that?
-Ed: The cramping tool. (laughs nervously)
-Mark: The what?
-Ed: What… Is it cramping? (gestures with hands as scrunching / clutching motion)
-Mark: For doing what? What did we do? I don’t know what we’ve done.
-Ed: People have used the whole block.
-Mark: Oh yeah. We’ve just cropped it. So it’s got no border around it. So you don’t set things off when you get really close to them.
-Molly: Aaaah. I see yes. Cos the corners actually could have. (makes a small square gesture with fingers)
- -->
-
-
-### GDPs in relation to project revision and debugging
-
-_NOTE - This section is particularly underdeveloped at this stage_
-
-NOTE this section is not related to GDPs.
 
 
 #### Code Patching as a guided process
@@ -1225,18 +1304,53 @@ Article on intangibility of game feel.
 
 ## Discussion on the use of game design patterns in the 3M learning design
 
-The majority of this chapter has focused on interpretation of observations of participant interactions and the resulting cultural processes. The remainder of this chapter discusses the use of game design patterns as a intermediate design construct to facilitate coding education and learner agency.
+The majority of this chapter has focused on interpretation of observations of participant interactions and the resulting cultural processes.  Game design patterns provide learners with a suitable vehicle to engage with coding practices partly due to their position between abstract computational concepts and concrete implementations of code structures. The following section explores potential implications for facilitators and researchers on use of GDP collection as an  intermediate pedagogical construct. The remainder of this chapter discusses the use of game design patterns facilitate the emergence of learner agency.
 
 <!-- A deeper exploration of other concepts may suit another chapter looking at synthesing observations in relation to broader research.  -->
+
+
+#### Design patterns as a mid-level pedagogical framework
+
+<!-- NOTE - PARTS OF THIS WERE MOVED TO THE LIT REVIEW. -->
+
+In chapter two I described the characteristic and limits of computational thinking as a pedagogical framework, specifically concepts include: varied interpretations; the role of levels of abstraction for teachers and learners; and the value of epistemological pluralism as a way to value concrete approaches.
+
+This conception of levels abstraction can be applied in this learning design to the different scopes game making activity systems. Through this lens the most abstract activity system is the larger one who's objective, to make an engaging game that tells an environmental story, aligns with the problem level of LOA. The level between abstract and concrete is that of choosing, implementing and testing game design patterns, which aligns with design. The most concrete in this interpretation is then the implementation of different lines of code or creation and migration of digital assets.
+
+
+
+<!-- As explored in the design chapter, later revisions of the design of supporting materials for each GDP included links to online descriptions of design, systems and computational concepts. Thus, beginning with experience and progressing to analysis in a sway that mirrors reflective professional practice. However analysis of my journal entries show  -->
+
+<!--
+SHIFT LATER?
+
+As previously explored I had a reluctance to shift learners away from the practical implementation of repeated game design patterns to focus on more abstract, de-contextualised conceptions of the knowledge. My concern hinged on the potential disorientation of imposed shifts of focus between different stages of creation the object of their activity shifts from the larger goal of making an engaging game to a narrower goal of implementing a game design pattern and the technical actions and operations needed to complete it. -->
+
+In professional coding environment and training programmes design patterns are seen as a middle ground between abstract CT concepts and more concrete techniques. In chapter two I outlined the work of Eriksson and colleagues using gameplay design patterns with young people [-@eriksson_using_2019] which drew inspiration from the value of design patterns as a form of "intermediate-level concept" as advocated by fellow researchers as a way of sharing results of research [@barendregt_intermediate-level_2018]. In addition, when choosing design patterns, choosing a suitable the level of abstraction is recommended.  
+
+    In order to be useful, patterns must present an abstraction of good practice at a meaningful level of granularity. Formulations that are too abstract will be impractical in real design use; those that are too specific will be difficult to re-use in new scenarios.[@dearden_pattern_2006, p. 20]
+
+Similarly, here the implementation of GDPs as a key unit of activity and analysis for this study, the justification being that it was at this level that richest use and development of tools and processes by the emerging community took place.
+
+The observations of this chapter show the advantages of GDP as an intermediate design concept, hovering in the space between too concrete to be repeated and too abstract to be grasped by novice game makers. GDPs create a tangible link between concrete player experience and the affordances of a guided creative process. Learners use of GDP as relatable and flexible constructs that facilitate  communication, sustaining engagement, planning and division of labour. The creation of designed objects using GDPS aid the personal appropriation and the propagation of technical and social processes game making practices.  
+
+Previously abstract concepts or processes become concrete through familiarisation via direct use and indirect observations through community participation. In many of the outlined uses of GDPs in chapter we can see processes at play that help bridge shifts in design perspective (MDA here?).
+
+Both the GDPs and the sub-actions of the wider activity design become short-cuts which stand in for previously tricky to complete set of actions. Rather than promising the transfer abstract concepts to other domains, we see learners build competency in participation in replicable processes. These processes which aid future iterations of the GDP implementation design cycle. The process of operationalisation of these sets of actions contributes to the creation of an informal, complex networked resource of operations which complement the more visible curated catalogue of GDPs.
+
+Game design patterns or their fragments are used as a form of design short cuts. Examples from the above include, _get an enemy in_ , _animate player_ or _get it in the game_ (when referring to transferring an graphical asset from authoring tool to the coding environment). The advantages of such shortcuts are, as discussed, to help with the prioritisation and ideation processes, to facilitate peer propagation of ideas, and potentially to inform debugging and improvements to increase game playability.
+
+
+NOTE - SUPPORT NEEDED FOR SOME OF THE BELOW - AND MORE DISCUSSION NEEDED ON CHALLENGE IN GENERAL
+
+There are challenges of the use of these short cuts and at a more general the design choice to lead with a menu of intermediate-level constructs in the form of a menu of GDPs. There may be confusion over use of terms to new comers and these GPD related terms may hide more complex patterns within the name. For example, the shortcuts in Mark and Ed's interaction hides a large amount of problems solving which seems "overwhelming". GDPs can limit the ideation process through an accelerated approach. Also as the menus themselves are not all used by students, and while GDPs do propagate from student to student, which risk further constraints on the process of asking questions about user experience and exploring ideas before committing to implementation.
+
 
 
 ### Discussion on GDPs, emerging processes and learner agency
 <!-- NOTE -  REFRAMING WITH A FOCUS ON AGENCY - IDEALLY THE LATER -->
 
-**Summary:** Game design patterns provide learners with a suitable vehicle to engage with coding practices partly due to their position between abstract computational concepts and concrete implementations of code structures. This section explores potential implications for facilitators and researchers on use of GDP collection as an  intermediate pedagogical construct.
-
 The process of creating a learning design where students were able to choose from a curated set of game design patterns is covered in the design chapter of this thesis. This chapter has begun a process of exploration of the nature and evolution of agency in the practices of the participants through the varied use of GDPs. In this final section I continue to explore emerging thoughts on learner agency, the use of game design patterns, especially within the context of a collection of patterns.
-In this section the response of users is explored in relation to other research on this areas.
 
  <!-- Using a choice of patterns when compared to instructional tutorials (previously explored in methods chapter)  -->
 
@@ -1278,42 +1392,6 @@ However, as a seeming counterpoint to this growing agency is the norming effects
 While the process of direction may be less totally learner-driven approach than the first iteration of the learning design P1, working with a starting menu of game patterns with support still provides challenges to learners and complexity of working processes. Design blockages still occur, and participants have to work with facilitators in depth to overcome issues. There is the possibility to adapt existing patterns, to add new patterns from outside the curated collection or to shift to new game paradigm requiring a different set of patterns altogether.
 
 SOME MORE DETAILED SYNTHESIS OF GDP AND AGENCY.
-
-#### Design patterns as a mid-level pedagogical framework
-
-<!-- NOTE - PARTS OF THIS WERE MOVED TO THE LIT REVIEW. -->
-
-In chapter two I described the characteristic and limits of computational thinking as a pedagogical framework, specifically concepts include: varied interpretations; the role of levels of abstraction for teachers and learners; and the value of epistemological pluralism as a way to value concrete approaches.
-
-This conception of levels abstraction can be applied in this learning design to the different scopes game making activity systems. Through this lens the most abstract activity system is the larger one who's objective, to make an engaging game that tells an environmental story, aligns with the problem level of LOA. The level between abstract and concrete is that of choosing, implementing and testing game design patterns, which aligns with design. The most concrete in this interpretation is then the implementation of different lines of code or creation and migration of digital assets.
-
-
-
-<!-- As explored in the design chapter, later revisions of the design of supporting materials for each GDP included links to online descriptions of design, systems and computational concepts. Thus, beginning with experience and progressing to analysis in a sway that mirrors reflective professional practice. However analysis of my journal entries show  -->
-
-<!--
-SHIFT LATER?
-
-As previously explored I had a reluctance to shift learners away from the practical implementation of repeated game design patterns to focus on more abstract, de-contextualised conceptions of the knowledge. My concern hinged on the potential disorientation of imposed shifts of focus between different stages of creation the object of their activity shifts from the larger goal of making an engaging game to a narrower goal of implementing a game design pattern and the technical actions and operations needed to complete it. -->
-
-In professional coding environment and training programmes design patterns are seen as a middle ground between abstract CT concepts and more concrete techniques. In chapter two I outlined the work of Eriksson and colleagues using gameplay design patterns with young people [-@eriksson_using_2019] which drew inspiration from the value of design patterns as a form of "intermediate-level concept" as advocated by fellow researchers as a way of sharing results of research [@barendregt_intermediate-level_2018]. In addition, when choosing design patterns, choosing a suitable the level of abstraction is recommended.  
-
-    In order to be useful, patterns must present an abstraction of good practice at a meaningful level of granularity. Formulations that are too abstract will be impractical in real design use; those that are too specific will be difficult to re-use in new scenarios.[@dearden_pattern_2006, p. 20]
-
-Similarly, here the implementation of GDPs as a key unit of activity and analysis for this study, the justification being that it was at this level that richest use and development of tools and processes by the emerging community took place.
-
-The observations of this chapter show the advantages of GDP as an intermediate design concept, hovering in the space between too concrete to be repeated and too abstract to be grasped by novice game makers. GDPs create a tangible link between concrete player experience and the affordances of a guided creative process. Learners use of GDP as relatable and flexible constructs that facilitate  communication, sustaining engagement, planning and division of labour. The creation of designed objects using GDPS aid the personal appropriation and the propagation of technical and social processes game making practices.  
-
-Previously abstract concepts or processes become concrete through familiarisation via direct use and indirect observations through community participation. In many of the outlined uses of GDPs in chapter we can see processes at play that help bridge shifts in design perspective (MDA here?).
-
-Both the GDPs and the sub-actions of the wider activity design become short-cuts which stand in for previously tricky to complete set of actions. Rather than promising the transfer abstract concepts to other domains, we see learners build competency in participation in replicable processes. These processes which aid future iterations of the GDP implementation design cycle. The process of operationalisation of these sets of actions contributes to the creation of an informal, complex networked resource of operations which complement the more visible curated catalogue of GDPs.
-
-Game design patterns or their fragments are used as a form of design short cuts. Examples from the above include, _get an enemy in_ , _animate player_ or _get it in the game_ (when referring to transferring an graphical asset from authoring tool to the coding environment). The advantages of such shortcuts are, as discussed, to help with the prioritisation and ideation processes, to facilitate peer propagation of ideas, and potentially to inform debugging and improvements to increase game playability.
-
-
-NOTE - SUPPORT NEEDED FOR SOME OF THE BELOW - AND MORE DISCUSSION NEEDED ON CHALLENGE IN GENERAL
-
-There are challenges of the use of these short cuts and at a more general the design choice to lead with a menu of intermediate-level constructs in the form of a menu of GDPs. There may be confusion over use of terms to new comers and these GPD related terms may hide more complex patterns within the name. For example, the shortcuts in Mark and Ed's interaction hides a large amount of problems solving which seems "overwhelming". GDPs can limit the ideation process through an accelerated approach. Also as the menus themselves are not all used by students, and while GDPs do propagate from student to student, which risk further constraints on the process of asking questions about user experience and exploring ideas before committing to implementation.
 
 
 ## Chapter Conclusion
