--- a/_posts/thesis_chapters/tocs/2023-12-4-Design.md_toc.md
+++ b/_posts/thesis_chapters/tocs/2023-12-4-Design.md_toc.md
@@ -1,104 +1,79 @@
--   [[0.1]{.toc-section-number} Research Questions - Feb
-    2023](#research-questions---feb-2023)
--   [[0.2]{.toc-section-number} Chapter
-    Introduction](#chapter-introduction)
--   [[0.3]{.toc-section-number} Vignette illustrating shifts in scope of
+-   [Research Questions - Feb 2023](#research-questions---feb-2023)
+-   [Chapter Introduction](#chapter-introduction)
+-   [Vignette illustrating shifts in scope of
     activity](#vignette-illustrating-shifts-in-scope-of-activity)
-    -   [[0.3.1]{.toc-section-number} Vignette 4.1 - An example of game
-        making
+    -   [Vignette 4.1 - An example of game making
         activity](#vignette-4.1---an-example-of-game-making-activity)
-        -   [[0.3.1.1]{.toc-section-number} Table of
-            Vignette](#table-of-vignette)
-    -   [[0.3.2]{.toc-section-number} Description of levels of activity
-        illustrated using the
+        -   [Table of Vignette](#table-of-vignette)
+    -   [Description of levels of activity illustrated using the
         vignette](#description-of-levels-of-activity-illustrated-using-the-vignette)
-        -   [[0.3.2.1]{.toc-section-number} Environmental factors and
+        -   [Environmental factors and
             objectives](#environmental-factors-and-objectives)
-        -   [[0.3.2.2]{.toc-section-number} Larger objective - Making
-            games for an
+        -   [Larger objective - Making games for an
             audience](#larger-objective---making-games-for-an-audience)
-        -   [[0.3.2.3]{.toc-section-number} Mid-level objective -
-            Constructing a game feature by
+        -   [Mid-level objective - Constructing a game feature by
             feature](#mid-level-objective---constructing-a-game-feature-by-feature)
-        -   [[0.3.2.4]{.toc-section-number} Smaller objectives and
-            actions - Implementing discrete code and design
+        -   [Smaller objectives and actions - Implementing discrete code
+            and design
             structures](#smaller-objectives-and-actions---implementing-discrete-code-and-design-structures)
--   [[0.4]{.toc-section-number} Summary of design
-    evolution](#summary-of-design-evolution)
-    -   [[0.4.0.1]{.toc-section-number} P1: Exploratory stage: Oct
-        2017 - Dec 2018](#p1-exploratory-stage-oct-2017---dec-2018)
-    -   [[0.4.0.2]{.toc-section-number} P2: Accelerated game making
-        programme (5 weeks): Jan - Feb
+-   [Summary of design evolution](#summary-of-design-evolution)
+    -   [P1: Exploratory stage: Oct 2017 - Dec
+        2018](#p1-exploratory-stage-oct-2017---dec-2018)
+    -   [P2: Accelerated game making programme (5 weeks): Jan - Feb
         2019](#p2-accelerated-game-making-programme-5-weeks-jan---feb-2019)
-    -   [[0.4.0.3]{.toc-section-number} P3: Adding a process drama to
-        the game making programme: April - May
+    -   [P3: Adding a process drama to the game making programme:
+        April - May
         2019](#p3-adding-a-process-drama-to-the-game-making-programme-april---may-2019)
-    -   [[0.4.0.4]{.toc-section-number} P4: Adapting to MakeCode Arcade
-        and more formal settings: Jan 2020 - September
+    -   [P4: Adapting to MakeCode Arcade and more formal settings: Jan
+        2020 - September
         2020](#p4-adapting-to-makecode-arcade-and-more-formal-settings-jan-2020---september-2020)
--   [[0.5]{.toc-section-number} Conflicts and design tensions
-    experienced by participants and
+-   [Conflicts and design tensions experienced by participants and
     facilitator/s](#conflicts-and-design-tensions-experienced-by-participants-and-facilitators)
--   [[0.6]{.toc-section-number} 1. Conflicts stemming from tensions
-    between privileging participant choices or underlying computing and
-    systems
+-   [1. Conflicts stemming from tensions between privileging participant
+    choices or underlying computing and systems
     concepts](#conflicts-stemming-from-tensions-between-privileging-participant-choices-or-underlying-computing-and-systems-concepts)
-    -   [[0.6.0.1]{.toc-section-number} Learning Dimensions
-        Map](#learning-dimensions-map)
-    -   [[0.6.0.2]{.toc-section-number} The potential of learning and
-        navigational
+    -   [Learning Dimensions Map](#learning-dimensions-map)
+    -   [The potential of learning and navigational
         maps](#the-potential-of-learning-and-navigational-maps)
--   [[0.7]{.toc-section-number} 2. Conflicts due to identity clashes and
-    dysfunctional group
+-   [2. Conflicts due to identity clashes and dysfunctional group
     work](#conflicts-due-to-identity-clashes-and-dysfunctional-group-work)
--   [[0.8]{.toc-section-number} 3. Tensions due to lack of access and
-    familiarity to game programming
+-   [3. Tensions due to lack of access and familiarity to game
+    programming
     tools](#tensions-due-to-lack-of-access-and-familiarity-to-game-programming-tools)
-    -   [[0.8.1]{.toc-section-number} Design adaptations to facilitate
-        novice use of a code
+    -   [Design adaptations to facilitate novice use of a code
         playground](#design-adaptations-to-facilitate-novice-use-of-a-code-playground)
-        -   [[0.8.1.1]{.toc-section-number} Addressing code syntax
+        -   [Addressing code syntax
             errors](#addressing-code-syntax-errors)
-        -   [[0.8.1.2]{.toc-section-number} Distributed
-            vs. self-contained approaches to asset
+        -   [Distributed vs. self-contained approaches to asset
             creation](#distributed-vs.-self-contained-approaches-to-asset-creation)
-        -   [[0.8.1.3]{.toc-section-number} Remixing and showcasing
+        -   [Remixing and showcasing
             projects](#remixing-and-showcasing-projects)
-    -   [[0.8.2]{.toc-section-number} Design choices of the starter game
+    -   [Design choices of the starter game
         template](#design-choices-of-the-starter-game-template)
-        -   [[0.8.2.1]{.toc-section-number} Structural design of the
-            game template](#structural-design-of-the-game-template)
-        -   [[0.8.2.2]{.toc-section-number} Variable editing for player
+        -   [Structural design of the game
+            template](#structural-design-of-the-game-template)
+        -   [Variable editing for player
             movement](#variable-editing-for-player-movement)
-        -   [[0.8.2.3]{.toc-section-number} Level design and
+        -   [Level design and
             prototyping](#level-design-and-prototyping)
-        -   [[0.8.2.4]{.toc-section-number} Background colour and a
-            pixel art](#background-colour-and-a-pixel-art)
-    -   [[0.8.3]{.toc-section-number} Observations on the game template
-        and core
+        -   [Background colour and a pixel
+            art](#background-colour-and-a-pixel-art)
+    -   [Observations on the game template and core
         tools](#observations-on-the-game-template-and-core-tools)
--   [[0.9]{.toc-section-number} 4. Participant conflict associated with
-    project navigation and use of
+-   [4. Participant conflict associated with project navigation and use
+    of
     documentation](#participant-conflict-associated-with-project-navigation-and-use-of-documentation)
-    -   [[0.9.0.1]{.toc-section-number} Quick Start
-        Cards](#quick-start-cards)
-    -   [[0.9.0.2]{.toc-section-number} Code snippet
-        examples](#code-snippet-examples)
-    -   [[0.9.0.3]{.toc-section-number} Structuring instructional
-        tutorial chapters](#structuring-instructional-tutorial-chapters)
-    -   [[0.9.0.4]{.toc-section-number} Theming the a collection of game
-        design patterns to aid
+    -   [Quick Start Cards](#quick-start-cards)
+    -   [Code snippet examples](#code-snippet-examples)
+    -   [Structuring instructional tutorial
+        chapters](#structuring-instructional-tutorial-chapters)
+    -   [Theming the a collection of game design patterns to aid
         navigation](#theming-the-a-collection-of-game-design-patterns-to-aid-navigation)
--   [[0.10]{.toc-section-number} Chapter
-    Discussion](#chapter-discussion)
-    -   [[0.10.1]{.toc-section-number} On the emergent and mutual nature
-        of the design and research
+-   [Chapter Discussion](#chapter-discussion)
+    -   [On the emergent and mutual nature of the design and research
         process](#on-the-emergent-and-mutual-nature-of-the-design-and-research-process)
-    -   [[0.10.2]{.toc-section-number} Discussion on authenticity and
-        agency concerning tools and
+    -   [Discussion on authenticity and agency concerning tools and
         resources](#discussion-on-authenticity-and-agency-concerning-tools-and-resources)
-    -   [[0.10.3]{.toc-section-number} Summary of barriers and tensions
-        explored in this
+    -   [Summary of barriers and tensions explored in this
         chapter](#summary-of-barriers-and-tensions-explored-in-this-chapter)
-    -   [[0.10.4]{.toc-section-number} Link to next
-        chapter](#link-to-next-chapter)
+    -   [Link to next chapter](#link-to-next-chapter)
