--- a/_posts/thesis_chapters/tocs/2023-12-6-Methods.md_toc.md
+++ b/_posts/thesis_chapters/tocs/2023-12-6-Methods.md_toc.md
@@ -1,103 +1,78 @@
--   [[0.1]{.toc-section-number} Research Questions - Feb
-    2023](#research-questions---feb-2023)
--   [[0.2]{.toc-section-number} Introduction](#introduction)
-    -   [[0.2.1]{.toc-section-number} Notes on structure of the
+-   [Research Questions - Feb 2023](#research-questions---feb-2023)
+-   [Introduction](#introduction)
+    -   [Notes on structure of the
         chapter](#notes-on-structure-of-the-chapter)
--   [[0.3]{.toc-section-number} Re-examining barriers associated with
-    cultural
+-   [Re-examining barriers associated with cultural
     factors](#re-examining-barriers-associated-with-cultural-factors)
-    -   [[0.3.1]{.toc-section-number} Barriers and tensions associated
-        with authenticity of audience - MOVE PERHAPS TO
+    -   [Barriers and tensions associated with authenticity of
+        audience - MOVE PERHAPS TO
         PLAYTESTING](#barriers-and-tensions-associated-with-authenticity-of-audience---move-perhaps-to-playtesting)
-        -   [[0.3.1.1]{.toc-section-number} Learners may not find coding
-            a project a motivating project if it is only a private
-            activity with no authentic
+        -   [Learners may not find coding a project a motivating project
+            if it is only a private activity with no authentic
             audience](#learners-may-not-find-coding-a-project-a-motivating-project-if-it-is-only-a-private-activity-with-no-authentic-audience)
-        -   [[0.3.1.2]{.toc-section-number} Restricted vs extended
-            community - e.g. why not scratch with online community? -
-            MOVE TO DISCUSSION ON
+        -   [Restricted vs extended community - e.g. why not scratch
+            with online community? - MOVE TO DISCUSSION ON
             PLAYTESTING?](#restricted-vs-extended-community---e.g.-why-not-scratch-with-online-community---move-to-discussion-on-playtesting)
-    -   [[0.3.2]{.toc-section-number} Note this has been moved from
-        Design chapter so needs a place to
+    -   [Note this has been moved from Design chapter so needs a place
+        to
         sit.](#note-this-has-been-moved-from-design-chapter-so-needs-a-place-to-sit.)
-    -   [[0.3.3]{.toc-section-number} Using Physical Maps of Missions as
-        Game Design
+    -   [Using Physical Maps of Missions as Game Design
         Patterns](#using-physical-maps-of-missions-as-game-design-patterns)
-    -   [[0.3.4]{.toc-section-number} Barriers of identity hardcore
-        coding & dysfunctional group work - REALLY COMPRESS UNLESS DATA
-        BECOMES PRESENT - USE AS BASIS FOR
+    -   [Barriers of identity hardcore coding & dysfunctional group
+        work - REALLY COMPRESS UNLESS DATA BECOMES PRESENT - USE AS
+        BASIS FOR
         DISCUSSION?](#barriers-of-identity-hardcore-coding-dysfunctional-group-work---really-compress-unless-data-becomes-present---use-as-basis-for-discussion)
-        -   [[0.3.4.1]{.toc-section-number} Navigating the
-            conflict](#navigating-the-conflict)
--   [[0.4]{.toc-section-number} Exploring the impact of a drama
+        -   [Navigating the conflict](#navigating-the-conflict)
+-   [Exploring the impact of a drama
     processes](#exploring-the-impact-of-a-drama-processes)
-    -   [[0.4.1]{.toc-section-number} Vignette 4.1.a - Introducing a
-        drama process](#vignette-4.1.a---introducing-a-drama-process)
-    -   [[0.4.2]{.toc-section-number} Description of Vignette
-        4.1.a](#description-of-vignette-4.1.a)
-    -   [[0.4.3]{.toc-section-number} Vignette 4.1.b - Session
-        reflections and secret
+    -   [Vignette 4.1.a - Introducing a drama
+        process](#vignette-4.1.a---introducing-a-drama-process)
+    -   [Description of Vignette 4.1.a](#description-of-vignette-4.1.a)
+    -   [Vignette 4.1.b - Session reflections and secret
         missions](#vignette-4.1.b---session-reflections-and-secret-missions)
-    -   [[0.4.4]{.toc-section-number} Description of Vignette
-        4.1.b](#description-of-vignette-4.1.b)
-    -   [[0.4.5]{.toc-section-number} Reflecting in
-        role](#reflecting-in-role)
-    -   [[0.4.6]{.toc-section-number} Observations on written
-        interactions with the alien in the
+    -   [Description of Vignette 4.1.b](#description-of-vignette-4.1.b)
+    -   [Reflecting in role](#reflecting-in-role)
+    -   [Observations on written interactions with the alien in the
         drama](#observations-on-written-interactions-with-the-alien-in-the-drama)
-        -   [[0.4.6.1]{.toc-section-number} Exploring documentation and
-            accessing technical help within the drama
+        -   [Exploring documentation and accessing technical help within
+            the drama
             frame](#exploring-documentation-and-accessing-technical-help-within-the-drama-frame)
-        -   [[0.4.6.2]{.toc-section-number} Playful dialogue with the
-            aliens unrelated to game
+        -   [Playful dialogue with the aliens unrelated to game
             making](#playful-dialogue-with-the-aliens-unrelated-to-game-making)
-    -   [[0.4.7]{.toc-section-number} Use of side missions to encourage
-        varied creative
+    -   [Use of side missions to encourage varied creative
         practices](#use-of-side-missions-to-encourage-varied-creative-practices)
-    -   [[0.4.8]{.toc-section-number} Concluding remarks on process
+    -   [Concluding remarks on process
         drama](#concluding-remarks-on-process-drama)
--   [[0.5]{.toc-section-number} Emerging cultural
-    practices](#emerging-cultural-practices)
-    -   [[0.5.1]{.toc-section-number} Playtesting](#playtesting)
-        -   [[0.5.1.1]{.toc-section-number} Playtesting as a cultural
+-   [Emerging cultural practices](#emerging-cultural-practices)
+    -   [Playtesting](#playtesting)
+        -   [Playtesting as a cultural
             process](#playtesting-as-a-cultural-process)
-        -   [[0.5.1.2]{.toc-section-number} Playtesting and embodied
-            participation in the games of
+        -   [Playtesting and embodied participation in the games of
             others](#playtesting-and-embodied-participation-in-the-games-of-others)
-        -   [[0.5.1.3]{.toc-section-number} Community concepts and
-            norming behaviour emerging during
+        -   [Community concepts and norming behaviour emerging during
             playtesting](#community-concepts-and-norming-behaviour-emerging-during-playtesting)
-    -   [[0.5.2]{.toc-section-number} Emerging use of narratives and
-        graphics which drawing on home funds of
+    -   [Emerging use of narratives and graphics which drawing on home
+        funds of
         knowledge](#emerging-use-of-narratives-and-graphics-which-drawing-on-home-funds-of-knowledge)
-        -   [[0.5.2.1]{.toc-section-number} Summary: Home Funds and
-            RQs](#summary-home-funds-and-rqs)
-    -   [[0.5.3]{.toc-section-number} Flexible design
-        practices](#flexible-design-practices)
-        -   [[0.5.3.1]{.toc-section-number} Supporting Digital/Game
+        -   [Summary: Home Funds and RQs](#summary-home-funds-and-rqs)
+    -   [Flexible design practices](#flexible-design-practices)
+        -   [Supporting Digital/Game
             Jamming](#supporting-digitalgame-jamming)
-        -   [[0.5.3.2]{.toc-section-number} The potential of emergent
-            "non-productive"
+        -   [The potential of emergent "non-productive"
             activities](#the-potential-of-emergent-non-productive-activities)
--   [[0.6]{.toc-section-number} Discussion](#discussion)
-    -   [[0.6.1]{.toc-section-number} COMMENTS ON FORMAT OF Discussions
-        / Conclusion](#comments-on-format-of-discussions-conclusion)
-    -   [[0.6.2]{.toc-section-number} Nurturing agency by creating space
-        for emergent
+-   [Discussion](#discussion)
+    -   [COMMENTS ON FORMAT OF Discussions /
+        Conclusion](#comments-on-format-of-discussions-conclusion)
+    -   [Nurturing agency by creating space for emergent
         practices](#nurturing-agency-by-creating-space-for-emergent-practices)
-    -   [[0.6.3]{.toc-section-number} Discussion on dimensions of
-        authenticity in in relation to
+    -   [Discussion on dimensions of authenticity in in relation to
         Agency](#discussion-on-dimensions-of-authenticity-in-in-relation-to-agency)
-        -   [[0.6.3.1]{.toc-section-number} Positive affective space
-            within a drama
+        -   [Positive affective space within a drama
             process](#positive-affective-space-within-a-drama-process)
-        -   [[0.6.3.2]{.toc-section-number} The freedoms and
-            restrictions of
+        -   [The freedoms and restrictions of
             playgrounds](#the-freedoms-and-restrictions-of-playgrounds)
-        -   [[0.6.3.3]{.toc-section-number} Extending the metaphor -
-            anchoring in sheltered
+        -   [Extending the metaphor - anchoring in sheltered
             harbours](#extending-the-metaphor---anchoring-in-sheltered-harbours)
-        -   [[0.6.3.4]{.toc-section-number} Implications in
-            conceptualisations of forms of
+        -   [Implications in conceptualisations of forms of
             agency](#implications-in-conceptualisations-of-forms-of-agency)
--   [[0.7]{.toc-section-number} Conclusion](#conclusion)
+-   [Conclusion](#conclusion)
