--- a/_posts/thesis_chapters/tocs/2024-1-5-Gdps2.md_toc.md
+++ b/_posts/thesis_chapters/tocs/2024-1-5-Gdps2.md_toc.md
@@ -1,106 +1,80 @@
--   [[0.1]{.toc-section-number} Research Questions - Feb
-    2024](#research-questions---feb-2024)
--   [[0.2]{.toc-section-number} Notes to
-    restructure](#notes-to-restructure)
-    -   [[0.2.1]{.toc-section-number} Chapter outline](#chapter-outline)
-    -   [[0.2.2]{.toc-section-number} On GDP as a germ-cell and unit of
-        analysis - and chapter
-        outline](#on-gdp-as-a-germ-cell-and-unit-of-analysis---and-chapter-outline)
--   [[0.3]{.toc-section-number} Study of Vignette
-    A](#study-of-vignette-a)
-    -   [[0.3.1]{.toc-section-number} Descriptive Commentary on Vignette
+-   [Research Questions - Feb 2024](#research-questions---feb-2024)
+-   [Notes to restructure](#notes-to-restructure)
+-   [Chapter outline](#chapter-outline)
+-   [On GDP as a germ-cell and unit of analysis - and chapter
+    outline](#on-gdp-as-a-germ-cell-and-unit-of-analysis---and-chapter-outline)
+-   [Study of Vignette A](#study-of-vignette-a)
+    -   [Descriptive Commentary on Vignette
         A](#descriptive-commentary-on-vignette-a)
--   [[0.4]{.toc-section-number} Observations and analysis of use of Game
-    Design Patterns by
+-   [Observations and analysis of use of Game Design Patterns by
     participants](#observations-and-analysis-of-use-of-game-design-patterns-by-participants)
--   [[0.5]{.toc-section-number} The role of GDPs in the personal
-    appropriation of computational, design and systems
+-   [The role of GDPs in the personal appropriation of computational,
+    design and systems
     concepts](#the-role-of-gdps-in-the-personal-appropriation-of-computational-design-and-systems-concepts)
--   [[0.6]{.toc-section-number} Guided
-    Participation](#guided-participation)
-    -   [[0.6.1]{.toc-section-number} GDPs offer the potential to assist
-        project navigation, acting as a framework for code examples and
-        step-by-step
+-   [Guided Participation](#guided-participation)
+    -   [GDPs offer the potential to assist project navigation, acting
+        as a framework for code examples and step-by-step
         tutorials](#gdps-offer-the-potential-to-assist-project-navigation-acting-as-a-framework-for-code-examples-and-step-by-step-tutorials)
-    -   [[0.6.2]{.toc-section-number} GDPs used to scaffold ideation
+    -   [GDPs used to scaffold ideation
         processes](#gdps-used-to-scaffold-ideation-processes)
-        -   [[0.6.2.1]{.toc-section-number} Problem solving practices as
-            a fund of knowledge (but not really
+        -   [Problem solving practices as a fund of knowledge (but not
+            really
             GDP)](#problem-solving-practices-as-a-fund-of-knowledge-but-not-really-gdp)
-        -   [[0.6.2.2]{.toc-section-number} Paper prototyping mapping
-            visual matrix](#paper-prototyping-mapping-visual-matrix)
-        -   [[0.6.2.3]{.toc-section-number} GDPs as used by participants
-            in their prioritisation in the ideation
+        -   [Paper prototyping mapping visual
+            matrix](#paper-prototyping-mapping-visual-matrix)
+        -   [GDPs as used by participants in their prioritisation in the
+            ideation
             process](#gdps-as-used-by-participants-in-their-prioritisation-in-the-ideation-process)
-    -   [[0.6.3]{.toc-section-number} GDPs aiding the process of
-        division of
+    -   [GDPs aiding the process of division of
         labour](#gdps-aiding-the-process-of-division-of-labour)
-        -   [[0.6.3.1]{.toc-section-number} The development of divisions
-            of labour - MOVED FROM NEXT
+        -   [The development of divisions of labour - MOVED FROM NEXT
             CHAPTER](#the-development-of-divisions-of-labour---moved-from-next-chapter)
-    -   [[0.6.4]{.toc-section-number} The role of GDP used in emerging
-        tool use, technical processes and specialist
-        language](#the-role-of-gdp-used-in-emerging-tool-use-technical-processes-and-specialist-language)
-        -   [[0.6.4.1]{.toc-section-number} Other examples of GDP
-            driving adoption of technical
-            processes](#other-examples-of-gdp-driving-adoption-of-technical-processes)
-    -   [[0.6.5]{.toc-section-number} GDPs in relation to project
-        revision and
-        debugging](#gdps-in-relation-to-project-revision-and-debugging)
-        -   [[0.6.5.1]{.toc-section-number} Code Patching as a guided
+    -   [The role of GDP used in emerging technical
+        processes](#the-role-of-gdp-used-in-emerging-technical-processes)
+        -   [Use of GDPs to facilitate use of
+            tools](#use-of-gdps-to-facilitate-use-of-tools)
+        -   [Diverse use of technical processes driven by
+            GDPs](#diverse-use-of-technical-processes-driven-by-gdps)
+        -   [Use of GDPs in the development of shared
+            language](#use-of-gdps-in-the-development-of-shared-language)
+        -   [Code Patching as a guided
             process](#code-patching-as-a-guided-process)
-        -   [[0.6.5.2]{.toc-section-number} GDPs used to nurture
-            tactical responses to coding
+        -   [GDPs used to nurture tactical responses to coding
             errors](#gdps-used-to-nurture-tactical-responses-to-coding-errors)
-        -   [[0.6.5.3]{.toc-section-number} Concluding remarks on
-            debugging and
+        -   [Concluding remarks on debugging and
             revision](#concluding-remarks-on-debugging-and-revision)
--   [[0.7]{.toc-section-number} Cultural Dimension](#cultural-dimension)
-    -   [[0.7.1]{.toc-section-number} The role of GDPs to facilitate
-        learners to design for
+-   [Cultural Dimension](#cultural-dimension)
+    -   [The role of GDPs to facilitate learners to design for
         others](#the-role-of-gdps-to-facilitate-learners-to-design-for-others)
-        -   [[0.7.1.1]{.toc-section-number} Referring to GDPs
-            (especially during playtesting) can help scaffold the
-            process of imagining the end user
+        -   [Referring to GDPs (especially during playtesting) can help
+            scaffold the process of imagining the end user
             experiences.](#referring-to-gdps-especially-during-playtesting-can-help-scaffold-the-process-of-imagining-the-end-user-experiences.)
-        -   [[0.7.1.2]{.toc-section-number} GDPs, the scale/nature of
-            project goals & designing for
+        -   [GDPs, the scale/nature of project goals & designing for
             others](#gdps-the-scalenature-of-project-goals-designing-for-others)
-        -   [[0.7.1.3]{.toc-section-number} Other examples and
-            interpretation on designing for others / shifts of
+        -   [Other examples and interpretation on designing for others /
+            shifts of
             perspective](#other-examples-and-interpretation-on-designing-for-others-shifts-of-perspective)
-    -   [[0.7.2]{.toc-section-number} Role of playtesting and feedback
-        and GDPs](#role-of-playtesting-and-feedback-and-gdps)
-        -   [[0.7.2.1]{.toc-section-number} GDP concepts and language
-            used in informal feedback for peers to influence
-            modification of
+    -   [Role of playtesting and feedback and
+        GDPs](#role-of-playtesting-and-feedback-and-gdps)
+        -   [GDP concepts and language used in informal feedback for
+            peers to influence modification of
             games](#gdp-concepts-and-language-used-in-informal-feedback-for-peers-to-influence-modification-of-games)
-        -   [[0.7.2.2]{.toc-section-number} The propagation of use of
-            GDPs through
+        -   [The propagation of use of GDPs through
             playtesting](#the-propagation-of-use-of-gdps-through-playtesting)
-    -   [[0.7.3]{.toc-section-number} GDPs facilitate the use of wider
-        funds of
+    -   [GDPs facilitate the use of wider funds of
         knowledge](#gdps-facilitate-the-use-of-wider-funds-of-knowledge)
-        -   [[0.7.3.1]{.toc-section-number} Family funds of
-            knowledge](#family-funds-of-knowledge)
-        -   [[0.7.3.2]{.toc-section-number} Funds of knowledge from
-            professional and enthusiast
+        -   [Family funds of knowledge](#family-funds-of-knowledge)
+        -   [Funds of knowledge from professional and enthusiast
             communities](#funds-of-knowledge-from-professional-and-enthusiast-communities)
--   [[0.8]{.toc-section-number} Discussion on the use of game design
-    patterns in the 3M learning
+-   [Discussion on the use of game design patterns in the 3M learning
     design](#discussion-on-the-use-of-game-design-patterns-in-the-3m-learning-design)
-    -   [[0.8.1]{.toc-section-number} Discussion on GDPs, emerging
-        processes and learner
+    -   [Design patterns as a mid-level pedagogical
+        framework](#design-patterns-as-a-mid-level-pedagogical-framework)
+    -   [Discussion on GDPs, emerging processes and learner
         agency](#discussion-on-gdps-emerging-processes-and-learner-agency)
-        -   [[0.8.1.1]{.toc-section-number} Tensions between
-            facilitating agency and norming
+        -   [Tensions between facilitating agency and norming
             practices](#tensions-between-facilitating-agency-and-norming-practices)
-        -   [[0.8.1.2]{.toc-section-number} Design patterns as a
-            mid-level pedagogical
-            framework](#design-patterns-as-a-mid-level-pedagogical-framework)
--   [[0.9]{.toc-section-number} Chapter Conclusion](#chapter-conclusion)
-    -   [[0.9.1]{.toc-section-number} Summary of the pedagogical
-        opportunities of Game Design
+-   [Chapter Conclusion](#chapter-conclusion)
+    -   [Summary of the pedagogical opportunities of Game Design
         Patterns](#summary-of-the-pedagogical-opportunities-of-game-design-patterns)
-    -   [[0.9.2]{.toc-section-number} Transition to next
-        chapter](#transition-to-next-chapter)
+    -   [Transition to next chapter](#transition-to-next-chapter)
